include/dss_capi.h

    DSS_CAPI_DLL void DSS_Dispose_PByte(int8_t** p);
    DSS_CAPI_DLL void DSS_Dispose_PDouble(double** p);
    DSS_CAPI_DLL void DSS_Dispose_PInteger(int32_t** p);
    DSS_CAPI_DLL void DSS_Dispose_PPAnsiChar(char ***p, int32_t cnt);
    /*
    Dispose temporary buffer data in the global result (GR) pointers
    */
    DSS_CAPI_DLL void DSS_DisposeGRData(void);
    /*
    Get references to the global result (GR) pointers, used in
    the *_GR variations of most getter functions

    The returned values in the DataPtrs will contain pointers to the global variables that contains the actual pointers.
    The CountPtrs are not reallocated during the execution, so the returned values contain the actual pointer values.
    */
    DSS_CAPI_DLL void DSS_GetGRPointers(
        char**** DataPtr_PPAnsiChar,
        double*** DataPtr_PDouble,
        int32_t*** DataPtr_PInteger,
        int8_t*** DataPtr_PByte,
        int32_t** CountPtr_PPAnsiChar,
        int32_t** CountPtr_PDouble,
        int32_t** CountPtr_PInteger,
        int32_t** CountPtr_PByte
    );
    /* Functions to get the current GR pointers individually, used in MATLAB */
    DSS_CAPI_DLL double* DSS_GR_DataPtr_PDouble(void);
    DSS_CAPI_DLL int32_t* DSS_GR_DataPtr_PInteger(void);
    DSS_CAPI_DLL int8_t* DSS_GR_DataPtr_PByte(void);
    DSS_CAPI_DLL int32_t* DSS_GR_CountPtr_PDouble(void);
    DSS_CAPI_DLL int32_t* DSS_GR_CountPtr_PInteger(void);
    DSS_CAPI_DLL int32_t* DSS_GR_CountPtr_PByte(void);
    DSS_CAPI_DLL void DSS_Dispose_PPointer(void*** p);